# ImageBasedModellingEdu

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt
examples/task1/: CMakeLists.txt  task1-5_test_pose_from_fundamental.cc  task1_test_math_basic.cc  task2_test_camera.cc  task3_test_matching.cc  task4_test_fundamental_8_point.cc  task5_test_fundamental_ransac.cc
examples/task2/: task2-1_test_triangle.cc  task2-2_test_p3p_ransac.cc  task2-3_test_lm_optimize.cc  task2-4_test_jacobian.cc  task2-5_test_bundle_adjustment.cc
examples/task3/: CMakeLists.txt  task3-1_test_incremental_sfm.cc
examples/task4/: CMakeLists.txt  task4-1_dmrecon_single_view.cc  task4-1_scene2pset_single_view.cc
features/: defines.h  matching.h  sift.cc
mvs/: dmrecon.cc  global_view_selection.cc  local_view_selection.cc  patch_sampler.cc  patch_sampler.h  settings.h
sfm/: bundle_adjustment.cc
surface/: octree.cc
texturing/: calculate_data_costs.cpp
util/: strings.h
